--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "prettier": "^2.0.5",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.0.5",
@@ -39,7 +40,16 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off",
+      "no-func-assign": "error",
+      "require-await": "error",
+      "no-var": "error",
+      "prefer-const": "warn",
+      "prefer-arrow-callback": "error",
+      "prefer-destructuring": "warn",
+      "prefer-template": "warn"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
