--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-router": "^3.1.6",
     "vue2-filters": "^0.9.1",
     "vue2-leaflet": "^2.5.2",
-    "vuetify": "^2.2.21"
+    "vuetify": "^2.4.8",
+    "vuetify-datetime-picker": "^2.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.12",
@@ -29,7 +30,7 @@
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.3.1",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.4.3"
+    "vuetify-loader": "^1.7.2"
   },
   "eslintConfig": {
     "root": true,
