--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "core-js": "^3.6.4",
     "leaflet": "^1.6.0",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
+    "vue-json-csv": "^1.2.12",
+    "vue-json-excel": "^0.3.0",
     "vue-router": "^3.1.6",
+    "vue-tel-input-vuetify": "^1.2.16",
     "vue2-filters": "^0.9.1",
     "vue2-leaflet": "^2.5.2",
-    "vuetify": "^2.4.8",
+    "vuetify": "^2.4.9",
     "vuetify-datetime-picker": "^2.1.1"
   },
   "devDependencies": {
