--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-clipboard2": "^0.3.1",
     "vue-json-csv": "^1.2.12",
     "vue-json-excel": "^0.3.0",
+    "vue-msal": "^3.2.0",
     "vue-router": "^3.1.6",
     "vue-tel-input-vuetify": "^1.2.16",
     "vue2-filters": "^0.9.1",
