--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.4",
+    "js-cookie": "^3.0.1",
     "leaflet": "^1.6.0",
     "vue": "^2.6.10",
     "vue-clipboard2": "^0.3.1",
