--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ typings/
 
 # dotenv environment variables file
 .env
+*.local
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -109,3 +110,13 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
