--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cms-frontend",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite --port 8080 --host",
     "build": "vite build",
@@ -15,23 +16,23 @@
     "@vueuse/core": "^10.6.0",
     "axios": "^1.8.2",
     "pinia": "^2.1.6",
-    "vue": "^3.3.4",
+    "vue": "^3.5.0",
     "vue-advanced-cropper": "^2.8.8",
     "vue-router": "^4.2.4",
     "vue3-clipboard": "^1.0.0",
     "vue3-toastify": "^0.1.14",
-    "vuetify": "^3.6.5"
+    "vuetify": "^3.8.7"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
-    "@vitejs/plugin-vue": "^4.3.4",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
-    "vite": "^4.5.14",
-    "vitest": "^0.34.4"
+    "vite": "^6.3.5",
+    "vitest": "^3.1.4"
   }
 }
