Put conference name in .env file. Closes #77

--- a/.env.development.local.example
+++ b/.env.development.local.example
@@ -1,6 +1,10 @@
 # URL of the backend API
 VITE_BACKEND_URL='https://domain.com/cms/api/'
 
-# backend credentials
+# dev backend credentials - do NOT use in production!
 VITE_BACKEND_USERNAME='admin'
 VITE_BACKEND_PASSWORD='password'
+
+# conference configuration
+VITE_CONFERENCE_FULL_NAME='Model United Nations of Lübeck'
+VITE_CONFERENCE_ABBREVIATION='MUNOL'
