Use backend token instead of username/password to authenticate frontend

--- a/.env.development.local.example
+++ b/.env.development.local.example
@@ -1,9 +1,15 @@
 # URL of the backend API
 VITE_BACKEND_URL='https://domain.com/cms/api/'
 
-# dev backend credentials - do NOT use in production!
-VITE_BACKEND_USERNAME='admin'
-VITE_BACKEND_PASSWORD='password'
+# backend credential - this will be included in the frontend build which is exposed to the public,
+# so only use it if the backend doesn't leak private data with this token
+#
+# To obtain a backend token, you have to:
+# 1. Log in to the backend
+# 2. Create a new user, including a token
+# 3. Set the users password to unusable (e.g. `python manage.py shell` followed by `from django.contrib.auth.models import User; user = User.objects.get(username='username'); user.set_unusable_password(); user.save()`)
+# 4. Copy the token and paste it here
+VITE_BACKEND_TOKEN="very-long-and-secure-token"
 
 # conference configuration
 VITE_CONFERENCE_FULL_NAME='Model United Nations of Lübeck'
