Single Sign On via SharePoint for Organizers

--- a/.env.development.local.example
+++ b/.env.development.local.example
@@ -14,3 +14,9 @@ VITE_BACKEND_TOKEN="very-long-and-secure-token"
 # conference configuration
 VITE_CONFERENCE_FULL_NAME='Model United Nations of Lübeck'
 VITE_CONFERENCE_ABBREVIATION='MUNOL'
+
+# Azure AD configuration
+VITE_AZURE_AD_CLIENT_ID="abcdefgh-1234-5678-90ab-1234567890ab"
+VITE_AZURE_AD_AUTHORITY="https://login.microsoftonline.com/abcdef12-3456-7890-abcd-ef1234567890"
+VITE_AZURE_AD_REDIRECT_URI="http://localhost:8080/management/"
+VITE_AZURE_AD_POST_LOGOUT_REDIRECT_URI="http://localhost:8080/management/"
