--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ src/assets/audio*
 src/assets/images*
 
 # ignore fonts for copyright reasons
-src/fonts*
+src/assets/fonts*
 
 #Mac specific files
 .DS_Store
