Use vPhoneInput for fancy mobile phone number input

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mdi/font": "^7.2.96",
     "@vueuse/core": "^10.6.0",
     "axios": "^1.12.0",
+    "flag-icons": "^7.5.0",
     "pinia": "^2.1.6",
+    "v-phone-input": "^5.1.0",
     "vue": "^3.5.0",
     "vue-advanced-cropper": "^2.8.8",
     "vue-router": "^4.2.4",
