Export spreadsheet with delegate registration links

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "v-phone-input": "^5.1.0",
     "vue": "^3.5.0",
     "vue-advanced-cropper": "^2.8.8",
+    "vue-json-excel3": "^1.0.30",
     "vue-router": "^4.2.4",
     "vue3-clipboard": "^1.0.0",
     "vue3-toastify": "^0.1.14",
